--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -114,7 +114,7 @@
     .btn {
         background-color: @darkblue;
         color: @white;
-        border: 1px solid @darkblue;
+        border: 1px solid @white;
         display: inline-block;
         padding: 1em 1.5em;
         outline: none;
@@ -124,8 +124,7 @@
         &:hover {
             background-color: @darkblue;
             color: @white;
-            border: 1px solid @darkblue;
-            opacity: 0.8;
+            border: 1px solid @white;
         }
 
         &.btn-outline-black {
@@ -187,6 +186,8 @@
 	}
 
     .first-line-bold {
+        font-weight: @font-weight;
+
         &:first-line {
             font-weight: @font-weight-bold;
         }
@@ -224,4 +225,5 @@
         .font-size-responsive(14px,14px,16px,16px,18px,18px,20px,20px);
         line-height: 1.4;
         font-weight: @font-weight;
+        margin-bottom: 20px;
     }
