--- a/plugins/woocommerce/assets/css/style-wc-child.css
+++ b/plugins/woocommerce/assets/css/style-wc-child.css
@@ -6,16 +6,28 @@ body.single-product {
   /******** Taxonomies layout ********/
   /******** Related Products ********/
 }
+body.single-product .woocommerce-message {
+  order: 0;
+  margin-left: 30px;
+}
 body.single-product .product {
   position: relative;
+}
+body.single-product .product .em-wc-wrapper {
+  padding-top: 102px;
 }
 body.single-product .custom-background {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 90%;
+  height: 100%;
   z-index: -10;
+}
+@media all and (min-width: 769px) {
+  body.single-product .custom-background {
+    height: 90%;
+  }
 }
 body.single-product .custom-background:before {
   content: "";
@@ -25,21 +37,27 @@ body.single-product .custom-background:before {
   width: 100%;
   height: 100%;
   background-image: url("../../../../assets/img/bali-background.svg");
-  background-size: contain;
+  background-size: cover;
   background-repeat: repeat;
   z-index: -5;
 }
-body.single-product .em-hero-simple:after {
-  bottom: 10%;
+@media all and (min-width: 769px) {
+  body.single-product .em-hero-simple:after {
+    bottom: 10%;
+  }
 }
 body.single-product .summary {
   color: #FFF;
+  padding-bottom: 100px;
+  z-index: 10;
 }
 body.single-product .summary .hl1 {
   font-family: 'Condor', sans-serif;
 }
 body.single-product #em-wc-container .woocommerce-breadcrumb {
   color: #FFF;
+  width: 100%;
+  margin: 20px 0 20px 30px;
 }
 body.single-product #em-wc-container .woocommerce-breadcrumb a {
   color: #FFF;
@@ -55,12 +73,12 @@ body.single-product #em-wc-container table.variations select {
   border-bottom: 1px solid #fff;
 }
 body.single-product #em-wc-container .single_variation_wrap input.qty {
-  width: 60px;
+  width: 50px;
   height: 44px;
   background-color: transparent;
   border: 1px solid #FFF;
   color: #FFF;
-  padding: 13px 10px;
+  padding: 13px 5px;
   font-size: 16px;
   line-height: 1em;
 }
@@ -69,8 +87,11 @@ body.single-product #em-wc-container .single_variation_wrap .button {
   height: 44px;
   font-size: 16px;
   line-height: 1em;
-  padding: 13px 10px;
-  border: 1px solid transparent;
+  padding: 13px 20px;
+  border: 1px solid #fff;
+}
+body.single-product .woocommerce-product-gallery {
+  z-index: 10;
 }
 body.single-product .woocommerce-product-gallery img {
   margin: 0 auto;
@@ -102,7 +123,7 @@ body.single-product #custom-taxonomies:before {
   width: 100%;
   height: 90px;
   background-image: url("../../../../assets/img/bali-background-2.png");
-  background-size: contain;
+  background-size: cover;
   background-repeat: repeat-x;
   z-index: 1;
 }
@@ -124,16 +145,16 @@ body.single-product #custom-taxonomies:after {
     width: 300px;
     height: 200px;
     background-image: url("../../../../assets/img/bali-background-3.svg");
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     z-index: 2;
   }
 }
 body.single-product #custom-taxonomies .region .region-background {
   position: absolute;
-  top: -20%;
-  left: -10%;
-  width: 100%;
+  top: -60px;
+  left: -30px;
+  width: 80%;
   height: 100%;
   z-index: 10;
 }
@@ -145,22 +166,22 @@ body.single-product #custom-taxonomies .region .region-background:before {
   width: 100%;
   height: 100%;
   background-image: url("../../../../assets/img/bali-background.svg");
-  background-size: contain;
+  background-size: cover;
   background-repeat: repeat;
 }
 body.single-product #custom-taxonomies .region img {
   position: relative;
   top: 0%;
-  left: 20%;
+  left: 30px;
   width: 80%;
   height: auto;
   z-index: 20;
 }
 body.single-product #custom-taxonomies .flavor .flavor-background {
   position: absolute;
-  top: 0;
-  left: 10%;
-  width: 100%;
+  top: 30px;
+  left: 60px;
+  width: 80%;
   height: 100%;
   z-index: 10;
 }
@@ -172,12 +193,12 @@ body.single-product #custom-taxonomies .flavor .flavor-background:before {
   width: 100%;
   height: 100%;
   background-image: url("../../../../assets/img/bali-background.svg");
-  background-size: contain;
+  background-size: cover;
   background-repeat: repeat;
 }
 body.single-product #custom-taxonomies .flavor img {
   position: relative;
-  top: -10%;
+  top: 0;
   left: 0%;
   width: 80%;
   height: auto;
@@ -196,12 +217,12 @@ body.single-product #custom-taxonomies .content {
 }
 body.single-product #related-products h4 {
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 body.single-product #related-products h5 {
   text-align: center;
-  margin-top: -40px;
-  margin-bottom: 60px;
+  margin-top: -30px;
+  margin-bottom: 50px;
 }
 body.single-product #related-products:before,
 body.single-product #related-products:after {
@@ -213,6 +234,7 @@ body.single-product #related-products .btn-line-left {
   margin-top: 40px;
 }
 body.woocommerce.archive .shop-header {
+  margin-top: 50px;
   margin-bottom: 50px;
 }
 body.woocommerce.archive .shop-header span {
@@ -233,7 +255,7 @@ body.woocommerce.archive .shop-header a.active {
   width: 100%;
   height: 100%;
   background-image: url("../../../../assets/img/bali-background.svg");
-  background-size: contain;
+  background-size: cover;
   background-repeat: repeat;
   -webkit-transition: all 0.6s ease;
   transition: all 0.6s ease;
@@ -246,6 +268,7 @@ body.woocommerce.archive .shop-header a.active {
   text-align: center;
   color: #FFF;
   display: block;
+  text-transform: uppercase;
 }
 .em-product-tile-4 .title {
   font-size: 2em;
@@ -253,6 +276,7 @@ body.woocommerce.archive .shop-header a.active {
   color: #FFF;
   display: block;
   font-family: 'Condor', sans-serif;
+  text-transform: uppercase;
 }
 .em-product-tile-4 .pt-images {
   position: relative;
