--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -802,9 +802,8 @@ header#main-header .shopping-cart-btn .cart-item-count {
 footer#main-footer {
   background-color: #0e1426;
   color: #fff;
-  padding-top: 40px;
+  padding-top: 60px;
   text-align: center;
-  margin-top: 50px;
 }
 @media all and (min-width: 768px) {
   footer#main-footer {
@@ -814,14 +813,15 @@ footer#main-footer {
 footer#main-footer:after {
   content: "";
   position: absolute;
-  top: 0;
+  top: -2px;
   left: 0;
   width: 100%;
-  height: 90px;
+  height: 80px;
   transform: rotate(180deg);
   background-image: url(../img/bali-background-2.png);
-  background-size: cover;
+  background-size: contain;
   background-repeat: repeat-x;
+  background-position: bottom;
 }
 footer#main-footer:before {
   content: "";
@@ -908,6 +908,15 @@ footer#main-footer nav ul li a {
 footer#main-footer nav ul li a:hover {
   color: #999;
 }
+body .instafeed .wdi_feed_container,
+body .instafeed .wdi_feed_wrapper,
+body .instafeed .wdi_photo_wrap_inner {
+  border: transparent !important;
+  background: transparent !important;
+}
+body .instafeed .wdi_load_more {
+  display: none !important;
+}
 body.starts-with-hero .em-hero-simple {
   margin-top: -102px;
 }
@@ -940,13 +949,14 @@ body.woocommerce-checkout .woocommerce {
 .em-hero-simple:after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -2px;
   left: 0;
   width: 100%;
-  height: 90px;
+  height: 80px;
   background-image: url(../img/bali-background-2.png);
-  background-size: cover;
+  background-size: contain;
   background-repeat: repeat-x;
+  background-position: bottom;
   z-index: 0;
 }
 .em-hero-simple .hl-1 {
@@ -957,6 +967,9 @@ body.woocommerce-checkout .woocommerce {
 }
 .em-hero-simple .desc p {
   margin: 0;
+}
+.em-hero-simple .inner-full {
+  padding-bottom: 80px;
 }
 .em-hero-simple .inner-full .inner-wrapper {
   width: 1200px;
@@ -969,7 +982,6 @@ body.woocommerce-checkout .woocommerce {
 .em-content-repeater a {
   font-size: 14px;
   color: #033142;
-  margin-bottom: 40px;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
   .em-content-repeater a {
@@ -1027,7 +1039,7 @@ body.woocommerce-checkout .woocommerce {
 }
 .em-content-repeater .row {
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 .em-content-repeater .row:last-child {
   margin-bottom: 0;
