--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -201,9 +201,8 @@
     footer#main-footer {
         background-color: #0e1426;
         color: #fff;
-        padding-top: 40px;
+        padding-top: 60px;
         text-align: center;
-        margin-top: 50px;
 
         @media all and (min-width: @breakpoint3) {
             text-align: left;
@@ -212,14 +211,15 @@
         &:after {
             content: "";
             position: absolute;
-            top: 0;
+            top: -2px;
             left: 0;
             width: 100%;
-            height: 90px;
+            height: 80px;
             transform: rotate(180deg);
             background-image: url(../img/bali-background-2.png);
-            background-size: cover;
+            background-size: contain;
             background-repeat: repeat-x;
+            background-position: bottom
         }
 
         &:before {
@@ -331,6 +331,21 @@
 ////////////////////////////////////////////////////////////////////////////////////
 
     body {
+
+        .instafeed {
+
+            .wdi_feed_container,
+            .wdi_feed_wrapper,
+            .wdi_photo_wrap_inner {
+                border: transparent !important;
+                background: transparent !important;
+            }
+
+            .wdi_load_more {
+                display: none !important;
+            }
+        }
+
         &.starts-with-hero {
             .em-hero-simple {
                 margin-top: -102px;
@@ -380,13 +395,14 @@
         &:after {
             content: "";
             position: absolute;
-            bottom: 0;
+            bottom: -2px;
             left: 0;
             width: 100%;
-            height: 90px;
+            height: 80px;
             background-image: url(../img/bali-background-2.png);
-            background-size: cover;
+            background-size: contain;
             background-repeat: repeat-x;
+            background-position: bottom;
             z-index: 0;
         }
 
@@ -401,10 +417,15 @@
         }
 
         .inner-full {
+            padding-bottom: 80px;
+
             .inner-wrapper {
                 width: 1200px;
                 color: #fff;
                 text-align: center;
+
+                @media all and (min-width: @breakpoint4_mf) {
+                }
             }
         }
     }
@@ -419,7 +440,7 @@
         a {
             .font-size-responsive(14px,14px,16px,16px,18px,18px,20px,20px);
             color: #033142;
-            margin-bottom: 40px;
+            // margin-bottom: 40px;
         }
 
         .fs-bg {
@@ -438,7 +459,7 @@
 
         .row {
             position: relative;
-            margin-bottom: 50px;
+            margin-bottom: 100px;
 
             &:last-child {
                 margin-bottom: 0;
