--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,32 +303,32 @@ h6 {
 }
 .hl-1,
 .hl1 {
-  font-size: 40px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 1.25;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
   .hl-1,
   .hl1 {
-    font-size: 40px;
+    font-size: 24px;
   }
 }
 @media all and (min-width: 480px) and (max-width: 768px) {
   .hl-1,
   .hl1 {
-    font-size: 40px;
+    font-size: 24px;
   }
 }
 @media all and (min-width: 768px) and (max-width: 1024px) {
   .hl-1,
   .hl1 {
-    font-size: 50px;
+    font-size: 28px;
   }
 }
 @media all and (min-width: 1024px) and (max-width: 1280px) {
   .hl-1,
   .hl1 {
-    font-size: 50px;
+    font-size: 32px;
   }
 }
 @media all and (min-width: 1280px) and (max-width: 1468px) {
@@ -363,32 +363,32 @@ h6 {
 }
 .hl-2,
 .hl2 {
-  font-size: 34px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 1.25;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
   .hl-2,
   .hl2 {
-    font-size: 34px;
+    font-size: 24px;
   }
 }
 @media all and (min-width: 480px) and (max-width: 768px) {
   .hl-2,
   .hl2 {
-    font-size: 34px;
+    font-size: 24px;
   }
 }
 @media all and (min-width: 768px) and (max-width: 1024px) {
   .hl-2,
   .hl2 {
-    font-size: 50px;
+    font-size: 28px;
   }
 }
 @media all and (min-width: 1024px) and (max-width: 1280px) {
   .hl-2,
   .hl2 {
-    font-size: 54px;
+    font-size: 32px;
   }
 }
 @media all and (min-width: 1280px) and (max-width: 1468px) {
@@ -423,32 +423,32 @@ h6 {
 }
 .hl-3,
 .hl3 {
-  font-size: 28px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 1.25;
 }
 @media all and (min-width: 360px) and (max-width: 480px) {
   .hl-3,
   .hl3 {
-    font-size: 28px;
+    font-size: 24px;
   }
 }
 @media all and (min-width: 480px) and (max-width: 768px) {
   .hl-3,
   .hl3 {
-    font-size: 28px;
+    font-size: 24px;
   }
 }
 @media all and (min-width: 768px) and (max-width: 1024px) {
   .hl-3,
   .hl3 {
-    font-size: 34px;
+    font-size: 28px;
   }
 }
 @media all and (min-width: 1024px) and (max-width: 1280px) {
   .hl-3,
   .hl3 {
-    font-size: 34px;
+    font-size: 32px;
   }
 }
 @media all and (min-width: 1280px) and (max-width: 1468px) {
@@ -483,7 +483,7 @@ h6 {
 }
 .hl-4,
 .hl4 {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 1.25;
 }
@@ -508,13 +508,13 @@ h6 {
 @media all and (min-width: 1024px) and (max-width: 1280px) {
   .hl-4,
   .hl4 {
-    font-size: 28px;
+    font-size: 32px;
   }
 }
 @media all and (min-width: 1280px) and (max-width: 1468px) {
   .hl-4,
   .hl4 {
-    font-size: 34px;
+    font-size: 36px;
   }
 }
 @media all and (min-width: 1468px) and (max-width: 1680px) {
@@ -734,7 +734,7 @@ a:hover {
 .fs_eichmeister .fs-dropdown-options button:last-child {
   border-bottom: 0;
 }
-body:not(.starts-with-hero) header#main-header {
+body:not(.starts-with-hero):not(.scrolled) header#main-header {
   transform: translate(-50%, 0);
 }
 header#main-header {
@@ -1039,13 +1039,13 @@ body.woocommerce-checkout .woocommerce {
 }
 .em-content-repeater .row {
   position: relative;
-  margin-bottom: 100px;
 }
 .em-content-repeater .row:last-child {
   margin-bottom: 0;
 }
 @media all and (min-width: 769px) {
   .em-content-repeater .row {
+    margin-bottom: 100px;
     left: 30px;
     top: 30px;
   }
@@ -1053,7 +1053,6 @@ body.woocommerce-checkout .woocommerce {
 .em-content-repeater .row .item {
   order: 1;
   position: relative;
-  background-clip: unset;
 }
 @media all and (min-width: 769px) {
   .em-content-repeater .row .item {
@@ -1097,25 +1096,31 @@ body.woocommerce-checkout .woocommerce {
 .em-content-repeater .row .item-text {
   padding: 30px;
 }
+@media all and (max-width: 768px) {
+  .em-content-repeater .row .item-image {
+    background: none !important;
+  }
+}
 @media all and (min-width: 769px) {
   .em-content-repeater .row .item-image > figure {
     position: relative;
     top: -30px;
     left: -30px;
+    z-index: 5;
   }
   .em-content-repeater .row .item-image:before {
     content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    width: calc(100% + 30px);
+    height: calc(100% + 30px);
     position: absolute;
     background-image: url("../img/module-content-repeater.svg");
-    background-size: contain;
+    background-size: 26%;
     background-repeat: repeat;
     -webkit-transition: all 0.6s ease;
     transition: all 0.6s ease;
-    background-position: top right;
+    bottom: 0;
+    right: 0;
+    background-position: bottom right;
   }
   .em-content-repeater .row.flipped {
     left: -30px;
@@ -1131,6 +1136,10 @@ body.woocommerce-checkout .woocommerce {
     right: -30px;
   }
   .em-content-repeater .row.flipped .item-image:before {
+    top: 0;
+    left: 0;
+    bottom: auto;
+    right: auto;
     background-position: top left;
   }
 }
