--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -109,8 +109,11 @@
 ////////////////////////////////////////////////////////////////////////////////////   
 
     body:not(.starts-with-hero) {
-        header#main-header {
-            transform: translate(-50%, 0);
+
+        &:not(.scrolled) {
+            header#main-header {
+                transform: translate(-50%, 0);
+            }
         }
     }
 
@@ -459,13 +462,13 @@
 
         .row {
             position: relative;
-            margin-bottom: 100px;
 
             &:last-child {
                 margin-bottom: 0;
             }
 
             @media all and (min-width: @breakpoint3_mf) {
+                margin-bottom: 100px;
                 left: 30px;
                 top: 30px;
             }
@@ -473,7 +476,6 @@
             .item {
                 order: 1;
                 position: relative;
-                background-clip: unset;
 
                 @media all and (min-width: @breakpoint3_mf) {
                     padding: 0;
@@ -523,27 +525,35 @@
                 padding: 30px;
             }
 
+            .item-image {
+                @media all and (max-width: @breakpoint3) {
+                    background: none !important;
+                }
+            }
+
+
             @media all and (min-width: @breakpoint3_mf) {
                 .item-image {
                     & > figure {
                         position: relative;
                         top: -30px;
                         left: -30px;
+                        z-index: 5;
                     }
 
                     &:before {
                         content: "";
-                        top: 0;
-                        left: 0;
-                        width: 100%;
-                        height: 100%;
+                        width: calc(100% + 30px);
+                        height: calc(100% + 30px);
                         position: absolute;
                         background-image: url("../img/module-content-repeater.svg");
-                        background-size: contain;
+                        background-size: 26%;
                         background-repeat: repeat;
                         -webkit-transition: all 0.6s ease;
                         transition: all 0.6s ease;
-                        background-position: top right;
+                        bottom: 0;
+                        right: 0;
+                        background-position: bottom right;
                     }
                 }
 
@@ -566,6 +576,10 @@
                         }
 
                         &:before {
+                            top: 0;
+                            left: 0;
+                            bottom: auto;
+                            right: auto;
                             background-position: top left;
                         }
                     }
